--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,16 +9,19 @@
     ],
     "files": [
         "./ts/AppEntryPoint.ts",
-        "./ts/config/Config.ts",
-        "./ts/config/ModuleDefinitions.ts",
         "./ts/application/Application.ts",
         "./ts/application/Context.ts",
         "./ts/application/Module.ts",
+        "./ts/config/Config.ts",
+        "./ts/config/ModuleDefinitions.ts",
+        "./ts/config/PanelDefinitions.ts",
         "./ts/messages/AppMessenger.ts",
         "./ts/messages/Message.ts",
         "./ts/module/Navigation.ts",
         "./ts/module/PageRender.ts",
         "./ts/typings/backbone.d.ts",
+        "./ts/typings/jquery.d.ts",
+        "./ts/typings/underscore.d.ts",
         "./ts/views/AppPage.ts",
         "./ts/views/AppView.ts",
         "./ts/views/panel/PagePanel.ts"
