--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   },
   "dependencies": {
     "grunt": "~0.4.5",
-    "grunt-typescript": "~0.6.1",
     "typescript": "~1.4.1",
     "grunt-typedoc": "~0.2.1",
     "grunt-contrib-less": "~1.0.0",
@@ -27,6 +26,7 @@
     "time-grunt": "~1.0.0",
     "grunt-contrib-uglify": "~0.7.0",
     "tslint": "~2.1.1",
-    "grunt-tslint": "~2.0.0"
+    "grunt-tslint": "~2.0.0",
+    "grunt-ts" : "~4.0.1"
   }
 }
