--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "dependencies": {
     "grunt": "~0.4.5",
     "typescript": "~1.4.1",
-    "grunt-typedoc": "~0.2.1",
     "grunt-contrib-less": "~1.0.0",
     "grunt-inline-data": "git://github.com/trymnilsen/grunt-inline-data.git#master",
     "grunt-minify-html": "~2.0.0",
@@ -27,6 +26,7 @@
     "grunt-contrib-uglify": "~0.7.0",
     "tslint": "~2.1.1",
     "grunt-tslint": "~2.0.0",
-    "grunt-ts" : "~4.0.1"
+    "grunt-ts": "~4.0.1",
+    "typedoc": "~0.3.2"
   }
 }
