--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,11 +10,12 @@
     "files": [
         "./ts/AppEntryPoint.ts",
         "./ts/application/Application.ts",
-        "./ts/application/Context.ts",
         "./ts/application/Module.ts",
         "./ts/config/Config.ts",
         "./ts/config/ModuleDefinitions.ts",
         "./ts/config/PanelDefinitions.ts",
+        "./ts/context/Context.ts",
+        "./ts/context/ContextData.ts",
         "./ts/messages/AppMessenger.ts",
         "./ts/messages/Message.ts",
         "./ts/module/LoadIndicator.ts",
