Move some application files to core and started on routing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,13 +9,14 @@
     ],
     "files": [
         "./ts/AppEntryPoint.ts",
-        "./ts/application/Application.ts",
-        "./ts/application/Module.ts",
         "./ts/config/Config.ts",
+        "./ts/config/Constants.ts",
         "./ts/config/ModuleDefinitions.ts",
         "./ts/config/PanelDefinitions.ts",
-        "./ts/context/Context.ts",
-        "./ts/context/ContextData.ts",
+        "./ts/core/Application.ts",
+        "./ts/core/Context.ts",
+        "./ts/core/Module.ts",
+        "./ts/core/Router.ts",
         "./ts/messages/AppMessenger.ts",
         "./ts/messages/Message.ts",
         "./ts/module/LoadIndicator.ts",
