--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
         "./ts/module/LoadIndicator.ts",
         "./ts/module/Navigation.ts",
         "./ts/module/PageRender.ts",
+        "./ts/typings/backbone-eventable.d.ts",
         "./ts/typings/backbone.d.ts",
         "./ts/typings/jquery.d.ts",
         "./ts/typings/underscore.d.ts",
