--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     ],
     "files": [
         "./ts/AppEntryPoint.ts",
+        "./ts/config/CollectionDefinitions.ts",
         "./ts/config/Config.ts",
         "./ts/config/Constants.ts",
         "./ts/config/IConfigurable.ts",
@@ -21,9 +22,14 @@
         "./ts/core/Module.ts",
         "./ts/core/Router.ts",
         "./ts/data/AppCollection.ts",
+        "./ts/data/AppCollectionResolver.ts",
         "./ts/data/IAppCollectionOptions.ts",
+        "./ts/data/persistance/IPersistable.ts",
+        "./ts/data/persistance/LocalStoragePersistance.ts",
+        "./ts/data/persistance/RESTPersistance.ts",
         "./ts/messages/AppMessenger.ts",
         "./ts/messages/Message.ts",
+        "./ts/module/Data/CollectionResolver.ts",
         "./ts/module/LoadIndicator.ts",
         "./ts/module/Navigation.ts",
         "./ts/module/PageRender.ts",
