--- a/bower.json
+++ b/bower.json
@@ -16,5 +16,8 @@
     "underscore": "~1.7.0",
     "bootstrap": "~3.3.1",
     "jquery": "~2.1.1"
+  },
+  "devDependencies": {
+    "font-awesome": "~4.3.0"
   }
 }
