--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,13 +14,15 @@
         "./ts/config/IConfigurable.ts",
         "./ts/config/ModuleDefinitions.ts",
         "./ts/config/PanelDefinitions.ts",
+        "./ts/config/StateDefinitions.ts",
+        "./ts/context/AuthenticationContext.ts",
+        "./ts/core/AppState.ts",
         "./ts/core/Application.ts",
         "./ts/core/Context.ts",
         "./ts/core/IDisposable.ts",
         "./ts/core/IFactory.ts",
         "./ts/core/Module.ts",
         "./ts/core/Router.ts",
-        "./ts/context/AuthenticationContext.ts",
         "./ts/data/AppCollection.ts",
         "./ts/data/IAppCollectionOptions.ts",
         "./ts/data/persistance/IPersistable.ts",
@@ -29,6 +31,7 @@
         "./ts/data/persistance/RESTPersistance.ts",
         "./ts/messages/AppMessenger.ts",
         "./ts/messages/Message.ts",
+        "./ts/module/Authentication.ts",
         "./ts/module/Data/CollectionResolver.ts",
         "./ts/module/LoadIndicator.ts",
         "./ts/module/Navigation.ts",
@@ -41,6 +44,10 @@
         "./ts/views/AppView.ts",
         "./ts/views/IAppViewAppendOptions.ts",
         "./ts/views/IAppViewOptions.ts",
+        "./ts/views/authentication/LoginContainer/LoginContainer.html.ts",
+        "./ts/views/authentication/LoginContainer/LoginContainer.ts",
+        "./ts/views/authentication/LoginForm/LoginForm.html.ts",
+        "./ts/views/authentication/LoginForm/LoginForm.ts",
         "./ts/views/navigation/NavigationMenu.html.ts",
         "./ts/views/navigation/NavigationMenu.ts",
         "./ts/views/panel/PagePanel.html.ts",
