--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,6 @@
         "./ts/config/IConfigurable.ts",
         "./ts/config/ModuleDefinitions.ts",
         "./ts/config/PanelDefinitions.ts",
-        "./ts/config/StateDefinitions.ts",
         "./ts/context/AuthenticationContext.ts",
         "./ts/core/AppState.ts",
         "./ts/core/Application.ts",
@@ -38,14 +37,14 @@
         "./ts/module/PageRender.ts",
         "./ts/typings/backbone-eventable.d.ts",
         "./ts/typings/backbone.d.ts",
+        "./ts/typings/bootstrap.d.ts",
         "./ts/typings/jquery.d.ts",
         "./ts/typings/underscore.d.ts",
         "./ts/views/AppPage.ts",
         "./ts/views/AppView.ts",
         "./ts/views/IAppViewAppendOptions.ts",
         "./ts/views/IAppViewOptions.ts",
-        "./ts/views/authentication/LoginContainer/LoginContainer.html.ts",
-        "./ts/views/authentication/LoginContainer/LoginContainer.ts",
+        "./ts/views/authentication/LoginAnimation/LoginAnimation.ts",
         "./ts/views/authentication/LoginForm/LoginForm.html.ts",
         "./ts/views/authentication/LoginForm/LoginForm.ts",
         "./ts/views/navigation/NavigationMenu.html.ts",
