--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ coverage
 build/Release
 
 #Generated CSS
-style/styles.css
+*/styles.css
 # Dependency directory
 # Commenting this out is preferred by some people, see
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
