--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,8 @@
     "bootstrap": "~3.3.1",
     "jquery": "~2.1.1",
     "font-awesome": "~4.3.0",
-    "gsap": "~1.16.1"
+    "gsap": "~1.16.1",
+    "jquery-ui-layout-bower": "~1.4.4",
+    "jquery-ui": "~1.11.4"
   }
 }
