--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,52 +7,5 @@
     "filesGlob": [
         "./ts/**/*.ts"
     ],
-    "files": [
-        "./ts/AppEntryPoint.ts",
-        "./ts/config/Config.ts",
-        "./ts/config/Constants.ts",
-        "./ts/config/IConfigurable.ts",
-        "./ts/config/ModuleDefinitions.ts",
-        "./ts/config/PanelDefinitions.ts",
-        "./ts/context/AuthenticationContext.ts",
-        "./ts/core/AppState.ts",
-        "./ts/core/Application.ts",
-        "./ts/core/Context.ts",
-        "./ts/core/IDisposable.ts",
-        "./ts/core/IFactory.ts",
-        "./ts/core/Module.ts",
-        "./ts/core/Router.ts",
-        "./ts/data/AppCollection.ts",
-        "./ts/data/IAppCollectionOptions.ts",
-        "./ts/data/persistance/IPersistable.ts",
-        "./ts/data/persistance/IPersistanceProvider.ts",
-        "./ts/data/persistance/LocalStoragePersistance.ts",
-        "./ts/data/persistance/RESTPersistance.ts",
-        "./ts/messages/AppMessenger.ts",
-        "./ts/messages/Message.ts",
-        "./ts/module/Authentication.ts",
-        "./ts/module/Data/CollectionResolver.ts",
-        "./ts/module/LoadIndicator.ts",
-        "./ts/module/Navigation.ts",
-        "./ts/module/PageRender.ts",
-        "./ts/typings/backbone-eventable.d.ts",
-        "./ts/typings/backbone.d.ts",
-        "./ts/typings/bootstrap.d.ts",
-        "./ts/typings/jquery.d.ts",
-        "./ts/typings/underscore.d.ts",
-        "./ts/views/AppPage.ts",
-        "./ts/views/AppView.ts",
-        "./ts/views/IAppViewAppendOptions.ts",
-        "./ts/views/IAppViewOptions.ts",
-        "./ts/views/authentication/LoginAnimation/LoginAnimation.ts",
-        "./ts/views/authentication/LoginForm/LoginForm.html.ts",
-        "./ts/views/authentication/LoginForm/LoginForm.ts",
-        "./ts/views/panel/PagePanel.html.ts",
-        "./ts/views/panel/PagePanel.ts",
-        "./ts/views/panel/custom_panels/CustomPagePanel.ts",
-        "./ts/views/panel/custom_panels/news/NewsPanel.html.ts",
-        "./ts/views/panel/custom_panels/news/NewsPanel.ts",
-        "./ts/views/panel/title_panel/TitlePanel.html.ts",
-        "./ts/views/panel/title_panel/TitlePanel.ts"
-    ]
+    "files": []
 }
