--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Aegir Client",
+  "name": "AegirClient",
   "version": "0.0.1",
   "description": "Client for Aegir Server",
   "main": "index.html",
@@ -25,7 +25,7 @@
     "grunt-tslint": "~2.0.0",
     "time-grunt": "~1.0.0",
     "tslint": "~2.1.1",
-    "typedoc": "~0.3.2",
+    "typedoc": "^0.3.8",
     "typescript": "^1.5.3"
   }
 }
