--- a/bower.json
+++ b/bower.json
@@ -12,17 +12,18 @@
     "tests"
   ],
   "dependencies": {
+    "antiscroll": "Automattic/antiscroll",
     "backbone": "~1.1.2",
-    "underscore": "~1.7.0",
     "bootstrap": "~3.3.1",
-    "jquery": "~2.1.1",
+    "dat-gui": "dataarts/dat.gui#~0.5.1",
     "font-awesome": "~4.4.0",
     "gsap": "~1.16.1",
-    "threejs": "*",
-    "stats.js": "*",
-    "antiscroll":"Automattic/antiscroll",
-    "dat-gui": "dataarts/dat.gui#~0.5.1",
+    "jquery": "~2.1.1",
+    "jquery-ui": "~1.11.4",
     "layout": "allpro/layout#~1.4.3",
-    "jquery-ui": "~1.11.4"
+    "stats.js": "*",
+    "threejs": "*",
+    "toastr": "~2.1.2",
+    "underscore": "~1.7.0"
   }
 }
